@@ -1,4 +1,5 @@
 0.07
+ - Update Module::Install to 1.18 version.
 
 0.06 2015-09-26T10:25:40+02:00
  - Improve LICENSE AND COPYRIGHT section in doc.
